traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:7: error: ':' expected but ')' found.
  def diagonale(y){
                 ^TraversalDiagonal:18: error: identifier expected but '}' found.
} 
^